--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,9 @@
     <string name="my_group">Моя группа</string>
     <string name="group_name">Название группы</string>
     <string name="group_task">Задание</string>
-    <string name="users_in_group">Работники</string>
+    <string name="users_in_group">Работники:</string>
     <string name="leader">Руководитель:</string>
+    <string name="save_group">Сохранить группу?</string>
+    <string name="finish_task">Выполнил задание</string>
+    <string name="request_call">Запросить звонок</string>
 </resources>
